# AndroidV8

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: OnLoad.cpp
app/src/main/cpp/include/: v8-internal.h  v8.h  v8.h.orig
app/src/main/cpp/include/cppgc/: default-platform.h
app/src/main/cpp/include/libplatform/: libplatform.h
app/src/main/java/com/example/myapplication/: Bridge.java  MainActivity.java  Node.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
